# server/api/controllers/main/router.js
@@ -6,4 +6,4 @@ export default express
   .Router()
   .use(auth) //we protect main page - authorised users only
   .get('/search', (req, res) => c.what(req, res, c.search))
-  .get('/stats/:uid', (req, res) => c.what(req, res, c.stats));
+  .get('/stats', (req, res) => c.what(req, res, c.stats));
